# albronze

./: Cargo.toml  LICENSE.txt  README.md
src/: arch.rs  intern.rs  location.rs  main.rs  scope.rs  target.rs
src/analyze/: error.rs  expr.rs  fold.rs  init.rs  mod.rs  stmt.rs
src/analyze/hir/: types.rs
src/analyze/new_fold/: mod.rs
src/data/: ast.rs  hir.rs  mod.rs  types.rs
src/error/: error.rs  handler.rs  mod.rs  warning.rs
src/hir/: mod.rs  types.rs
src/parse/: ast.rs  data.rs  decl.rs  error.rs  expr.rs  literal.rs  mod.rs  stmt.rs
src/parse/snapshots/: albronze__parse__literal__tests__float_literals_combo-10.snap  albronze__parse__literal__tests__float_literals_combo-11.snap  albronze__parse__literal__tests__float_literals_combo-12.snap  albronze__parse__literal__tests__float_literals_combo-13.snap  albronze__parse__literal__tests__float_literals_combo-14.snap  albronze__parse__literal__tests__float_literals_combo-15.snap  albronze__parse__literal__tests__float_literals_combo-16.snap  albronze__parse__literal__tests__float_literals_combo-2.snap  albronze__parse__literal__tests__float_literals_combo-3.snap  albronze__parse__literal__tests__float_literals_combo-4.snap  albronze__parse__literal__tests__float_literals_combo-5.snap  albronze__parse__literal__tests__float_literals_combo-6.snap  albronze__parse__literal__tests__float_literals_combo-7.snap  albronze__parse__literal__tests__float_literals_combo-8.snap  albronze__parse__literal__tests__float_literals_combo-9.snap  (+1 more)
src/preprocess/: error.rs  manager.rs  mod.rs  token.rs
(+72 files in other folders)
